--- a/src/themes/shared/_coverpage.css
+++ b/src/themes/shared/_coverpage.css
@@ -15,6 +15,8 @@
     position: absolute;
     inset: 0 0 0 0;
     background: var(--cover-bg-overlay);
+    -webkit-backdrop-filter: brightness(var(--cover-bg-brightness));
+    backdrop-filter: brightness(var(--cover-bg-brightness));
   }
 
   &.show {
@@ -64,6 +66,7 @@
 
 .cover-main {
   position: relative;
+  z-index: 1;
   flex: 1;
   margin: 5vh var(--content-margin-inline);
   text-align: center;
